2004-07-07  Andy Wingo  <wingo@pobox.com>

	* gnome/contrib/texinfo-buffer.scm (<stexi-ref-tag>): Name changed
	from stext-..., s/#:param-spec/#:gparam/, fix the hook.
	(ref): Fix typo.

	* gnome/contrib/help-browser.scm: New file, implements a help
	browser whose native data format is stexi.

	* examples/texinfo-browser.scm: New file, implements a help
	browser that will open a file given on the command line.

	* gnome/contrib/help-browser.scm: 
	* gnome/contrib/delay-tree-model.scm:
	* gnome/contrib/texinfo-buffer.scm: Make sure keywords have #:.

2004-07-06  Andy Wingo  <wingo@pobox.com>

	* gnome/contrib/texinfo-buffer.scm (gnome):
	s/(sxml texinfo)/(texinfo)/, don't use gw modules

	* gnome/contrib/filtered-list.scm: New file, implements a tree
	model whose backing store is a list. The model only exposes those
	members of the list that pass a predicate. The predicate can be
	set dynamically.

	* gnome/gw/gdk-spec.scm (unwrap-value-cg): Report errors with the
	wrapped var, not the scm var. This is for consistency with other
	instances of gw:error -- I think it fixes a bug, but jan will tell
	me :)

	* gnome/contrib/delay-tree-model.scm: New file, implements a tree
	model based on a delay tree. See (container delay-tree) in
	guile-lib for details.

2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gtk/graphical-repl.scm (gnome): Fix to use the right
	module.

	* gnome/contrib/texinfo-buffer.scm (gnome): Fix module name.

2004-07-01  Andreas Rottmann  <a.rottmann@gmx.at>

	* gdk-spec.scm (unwrap-value-cg): Adapted for unwrap-null-check ->
	unwrap-null-checked change.

2004-06-30  Andy Wingo  <wingo@pobox.com>

	* TODO: New file, for random thoughts.

	* Merged changelogs, again. I need to star-merge with head now...

	* gnome/gtk/gdk-event.scm: Fixed references to bogus g-wrap
	modules.

	* gnome/contrib/texinfo-buffer.scm: New file. Like what
	(text structured gtk-text-buffer) was, but a lot cleaner now. (And